--- a/task-pertemuan-11/package.json
+++ b/task-pertemuan-11/package.json
@@ -12,6 +12,7 @@
   "author": "Aditya Mufid Musyaffa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
