Add script to start server

--- a/task-pertemuan-11/package.json
+++ b/task-pertemuan-11/package.json
@@ -4,7 +4,8 @@
   "description": "Task basic express.js CRUD using array (without database)",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [
     "Express"
